--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -99,4 +99,101 @@
         "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
         "when a user tries to pick up one of cards.\n\n"
     </string>
+    <string name="SHARE_VIA">Share via</string>
+    <string name="SUBJEK">This is Link by Apps Movie </string>
+    <string name="FORMAT_YYY_MM_DD">yyyy-MM-dd</string>
+    <string name="FORMAT_DAY_DD_MM_YYYY">EEEE, dd MMM yyyy</string>
+    <string name="release_date">Release Date</string>
+    <string name="release_date_sub">Release Date</string>
+    <string name="vote_average">Vote Average</string>
+    <string name="vote_average_sub">7.2</string>
+    <string name="vote_count">Vote Count</string>
+    <string name="vote_count_sub">9292</string>
+    <string name="original_language">Original Language</string>
+    <string name="original_language_sub">en</string>
+    <string name="cari_filmmu_disini">Find your movie here !!!</string>
+    <string name="judul">Tittle</string>
+    <string name="overview">Overview</string>
+    <string name="date">Date</string>
+    <string name="detail">DETAIL</string>
+    <string name="share">Share</string>
+    <string name="name_fragment_now_playing">NOW PLAYING</string>
+    <string name="name_fragment_up_coming">UP COMING</string>
+    <string name="overview_post">overview post</string>
+    <string name="title_activity_settings">Settings</string>
+
+    <!-- Strings related to Settings -->
+
+    <!-- Example General settings -->
+    <string name="pref_header_general">General</string>
+
+    <string name="pref_title_social_recommendations">Enable social recommendations</string>
+    <string name="pref_description_social_recommendations">Recommendations for people to contact
+        based on your message history
+    </string>
+
+    <string name="pref_title_display_name">Display name</string>
+    <string name="pref_default_display_name">John Smith</string>
+
+    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
+    <string-array name="pref_example_list_titles">
+        <item>Always</item>
+        <item>When possible</item>
+        <item>Never</item>
+    </string-array>
+    <string-array name="pref_example_list_values">
+        <item>1</item>
+        <item>0</item>
+        <item>-1</item>
+    </string-array>
+
+    <!-- Example settings for Data & Sync -->
+    <string name="pref_header_data_sync">Data &amp; sync</string>
+
+    <string name="pref_title_sync_frequency">Sync frequency</string>
+    <string-array name="pref_sync_frequency_titles">
+        <item>15 minutes</item>
+        <item>30 minutes</item>
+        <item>1 hour</item>
+        <item>3 hours</item>
+        <item>6 hours</item>
+        <item>Never</item>
+    </string-array>
+    <string-array name="pref_sync_frequency_values">
+        <item>15</item>
+        <item>30</item>
+        <item>60</item>
+        <item>180</item>
+        <item>360</item>
+        <item>-1</item>
+    </string-array>
+
+    <string-array name="list_preference_entries">
+        <item>Entry 1</item>
+        <item>Entry 2</item>
+        <item>Entry 3</item>
+    </string-array>
+
+    <string-array name="list_preference_entry_values">
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+    </string-array>
+
+    <string-array name="multi_select_list_preference_default_value" />
+
+    <string name="pref_title_system_sync_settings">System sync settings</string>
+
+    <!-- Example settings for Notifications -->
+    <string name="pref_header_notifications">Notifications</string>
+
+    <string name="pref_title_new_message_notifications">New message notifications</string>
+
+    <string name="pref_title_ringtone">Ringtone</string>
+    <string name="pref_ringtone_silent">Silent</string>
+
+    <string name="pref_title_vibrate">Vibrate</string>
+    <string name="Message_loading">Sync data...</string>
+    <string name="Tittle_loading">Loading</string>
+    <string name="change_language_settings">Change Language Settings</string>
 </resources>
